# half-baked

./: .clocignore  .gitignore  LICENSE  README.md
bread_server/: Cargo.toml
bread_server/migrations/2022-12-29-025303_basic_db_setup/: down.sql  up.sql
bread_server/migrations/2022-12-29-184641_create_todos_etc/: down.sql  up.sql
bread_server/migrations/2023-01-08-190005_add_external_source_table/: down.sql  up.sql
bread_server/src/: build.rs  database.rs  lib.rs  server.rs  service.rs
bread_server/src/database/: mod.rs  models.rs  schema.rs  startup.rs  startup_test.rs
bread_server/src/service/: rpc.rs
jelly-ui/: pubspec.yaml
jelly-ui/android/app/: build.gradle
jelly-ui/android/app/src/main/: AndroidManifest.xml
jelly-ui/android/app/src/profile/: AndroidManifest.xml
jelly-ui/ios/Runner.xcodeproj/: project.pbxproj
jelly-ui/linux/: CMakeLists.txt  my_application.cc
jelly-ui/macos/Runner.xcodeproj/: project.pbxproj
jelly-ui/web/: index.html
jelly-ui/windows/: CMakeLists.txt
jelly-ui/windows/runner/: main.cpp
jelly_ui/: README.md
jelly_ui/android/app/src/main/kotlin/com/example/jelly_ui/: MainActivity.kt
jelly_ui/ios/Runner/: Info.plist
jelly_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
jelly_ui/macos/Runner/Configs/: AppInfo.xcconfig
jelly_ui/test/: widget_test.dart
jelly_ui/web/: manifest.json
jelly_ui/windows/runner/: Runner.rc
shared_resources/protobufs/: bread_service.proto  rpc.proto  users.proto
