[package]
name = "bread_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bread_server"
path = "src/server.rs"

[dependencies]
tonic  = "^0.8"
prost  = "^0.11"
tokio  = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
config = "^0.13"
directories = "^4.0.0"
chrono = "^0.4"
chrono-tz = "^0.8.1"
diesel_migrations = "^2.0.0"
log = "^0.4"

[build-dependencies]
tonic-build = "0.8"
