[package]
name = "bread_server"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[[bin]]
name = "bread_server"
path = "src/server.rs"

[dependencies]
diesel = { version = "^2.0.0", features = ["sqlite"] } # SQL-ORM + SQLite support
dotenvy = "^0.15" # Read data from .env files
directories = "^4.0.0" # Find all of our configuration/data directories
chrono = "^0.4" # Datetime utilities
chrono-tz = "^0.8.1" # Timezone utilities
diesel_migrations = "^2.0.0" # Diesel Migrations so that we can keep our database schemas up to date
log = "^0.4" # Simple Logging Facade
figment = "^0.10" # Configuration Utility
moka = "^0.9" # Caching library
ical = "0.7" # ical parsing
serde = "^1.0" #serialization/derialization support
interprocess = { version = "^1.2", features = ["tokio_support"]} # interprocess communication library
tokio = { version = "^1.23", features = ["full"] } # asynchronous application framework
prost = "^0.11" # protocol buffers for rust
bytes = "^1" # byte manipulation library
env_logger = "^0.10" # logging implementation
tonic = "^0.8" # rpc framework for rust 

[build-dependencies]
tonic-build = {version = "^0.8", features = ["prost"]} # build our protobufs